--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
     <footer class="mastfoot mt-auto">
       <div class="inner">
         
-        <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>,
-          by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+        <p>Website,
+          by Andrew Humphrey.</p>
       </div>
     </footer>
   </div>
@@ -333,7 +333,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
   </script>
-  <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="index.js"></script>
   
 </body>
 
