--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             c0-6.5,5.5-11.8,12.3-11.8h348.5c6.8,0,12.3,5.3,12.3,11.8v259.4C780.4,551.1,774.9,556.4,768.1,556.4z"/>
           <path style="fill:#202021;stroke:#050606;stroke-miterlimit:10;" d="M770.8,510.3H413c-3.2,0-5.8-2.6-5.8-5.8V284.2
             c0-6.1,4.9-11,11-11h350.6c6.4,0,11.7,5.2,11.7,11.7v215.8C780.4,506,776.1,510.3,770.8,510.3z"/>
-          <rect id="console" x="423.3" y="286.1" style="fill:#434445;stroke:#070808;stroke-miterlimit:10;" width="341" height="211.3"/>
+          <!-- <rect id="console" x="423.3" y="286.1" style="stroke:#050505;stroke-miterlimit:10;" width="341" height="211.3"/> -->
           <path style="fill:#C7C6C6;stroke:#070808;stroke-width:2;stroke-miterlimit:10;" d="M518.9,596.3l1,5.6c0.2,1.3,1.3,2.2,2.6,2.2
           h138.2c2.9,0,5.4-2.1,5.9-4.9l0-0.1c0.2-1-0.6-1.8-1.5-1.8L518.9,596.3z"/>
           <path style="fill:#A3A3A2;stroke:#070808;stroke-miterlimit:10;" d="M544.1,575.1l-25.4,20.3c-1.3,1.1-0.6,3.3,1.2,3.3l145.5-0.4
@@ -89,11 +89,11 @@
           c-0.5,0.8-0.8,1.7-0.8,2.6c0,1,0.3,2,0.9,2.8c0.6,0.8,1.2,1.4,2,1.6c-0.3,1-0.8,2.1-1.5,3.2c-1.1,1.6-2.2,2.5-3.2,2.5
           c-0.4,0-1-0.1-1.8-0.4c-0.7-0.3-1.4-0.4-1.9-0.4c-0.5,0-1.1,0.1-1.8,0.4c-0.7,0.3-1.2,0.4-1.7,0.4c-1.3,0-2.5-1.1-3.8-3.3
           c-1.2-2.2-1.9-4.3-1.9-6.3c0-1.9,0.5-3.5,1.4-4.7C590.6,526.4,591.8,525.8,593.3,525.8L593.3,525.8z"/>
-          <text id=console_text_1 x=36.5% y=47% fill="green"></text>
+          <!-- <text id=console_text_1 x=36.5% y=47% fill="green"></text>
           <text id=console_text_2 x=36.5% y=49% fill="green"></text>
           <text id=console_text_3 x=36.5% y=51% fill="green"></text>
           <text id=console_text_4 x=36.5% y=53% fill="green"></text>
-          <text id=console_text_5 x=36.5% y=55% fill="green"></text>
+          <text id=console_text_5 x=36.5% y=55% fill="green"></text> -->
           <text id=console_text_6 x="889.5" y="652.6" fill="black">Andrew Humphrey</text>
 
           <!-- ################################## -->
@@ -173,7 +173,7 @@
             C165.9,573.6,152.1,565.3,147.9,564z"/>
           </g>
           
-          <polyline class="light" style="opacity:0;fill:#FCF1C4;" points="276.4,343 781.8,605.3 312.8,606.8 223,418.9  "/>
+          <!-- <polyline class="light" style="opacity:0;fill:#FCF1C4;" points="276.4,343 781.8,605.3 312.8,606.8 223,418.9  "/> -->
           <g id="lamp-line">
             <path style="fill:#2FAF97;" d="M182.3,357.8c-8.4,28.4,1.9,61.2,23.2,78.5c1.2-0.5-1.2,0.5,0,0l-3.4-108.7
             C192.9,335.1,186,345.2,182.3,357.8z"/>
@@ -212,10 +212,10 @@
           </g>
         </svg>
       </div>
-
-      <div id="terminal">
+      <!-- #######################terminal################################ -->
+      <div id="terminal" class="container">
       </div>
-
+      <!-- #######################navbar################################### -->
       <div class="container-fluid" id="navbar">
         <div class="row">
           <div class="col-sm" id=first_icon>
