--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="My portfolio website">
     <meta name="author" content="Andrew Humphrey">
     <title>It sure is a beautiful day.</title>
+    <meta property="og:image" content="./digiwhale.png">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
