Added embedded link image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>It sure is a beautiful day.</title>
 
     <meta property='og:title' content='Andrew Humphreys portfolio '/>
-    <meta property='og:image' content='./digiwhale.png"/'/>
+    <meta property='og:image' content='./digiwhale.png'/>
     <meta property='og:description' content='My personal portfolio website'/>
     <meta property='og:url' content='https://digiwhale.github.io'/>
     <!-- Bootstrap core CSS -->
