Added embedded link image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property='og:title' content='Andrew Humphreys portfolio '/>
     <meta property='og:image' content='./digiwhale.png'/>
     <meta property='og:description' content='My personal portfolio website'/>
-    <meta property='og:url' content='https://digiwhale.github.io'/>
+    <meta property='og:url' content='https://digiwhale.github.io/index.html'/>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
