added resume feature

--- a/index.html
+++ b/index.html
@@ -292,59 +292,11 @@
             </div>
           </div>
         </div>
-        <div class=container id="about">
+        <div class=container-xs id="content_box">
           <hr>
-            <div class="row" id="about_me">
-              <p>About Me</p>
-            </div>
-          <hr>
-        </div>
-        <div class=container id="about">
-          <hr>
-            <div class="row" id="about_me">
-              <p>About Me</p>
-            </div>
-          <hr>
-        </div>
-        <div class=container id="about">
-          <hr>
-            <div class="row" id="about_me">
-              <p>About Me</p>
-            </div>
-          <hr>
-        </div>
-        <div class=container id="about">
-          <hr>
-            <div class="row" id="about_me">
-              <p>About Me</p>
-            </div>
-          <hr>
-        </div>
-        <div class=container id="about">
-          <hr>
-            <div class="row" id="about_me">
-              <p>About Me</p>
-            </div>
-          <hr>
-        </div>
-        <div class=container id="about">
-          <hr>
-            <div class="row" id="about_me">
-              <p>About Me</p>
-            </div>
-          <hr>
-        </div>
-        <div class=container id="about">
-          <hr>
-            <div class="row" id="about_me">
-              <p>About Me</p>
-            </div>
-          <hr>
-        </div>
-        <div class=container id="about">
-          <hr>
-            <div class="row" id="about_me">
-              <p>About Me</p>
+            <div class="row" id="content_row">
+              <iframe id="invisible" scrolling="no" style="display:block; width: 100%;">
+              </iframe>
             </div>
           <hr>
         </div>
