--- a/index.html
+++ b/index.html
@@ -293,164 +293,166 @@
         <div class=container-xs id="content_box">
           <hr>
             <div class="row" id="content_row">
-              <iframe id="invisible" scrolling="no" style="display:block; width: 100%;">
+              <iframe id="ahresume" scrolling="no" style="display:block; width: 100%;">
               </iframe>
             </div>
           <hr>
         </div>
         <!-- youtube videos -->
-        <div class="row">
+        <div class="container" id="youtube_videos">
+          <div class="row">
 
-          <!-- Grid column -->
-          <div class="col-xs col-md-12 mb-4">
+            <!-- Grid column -->
+            <div class="col-xs col-md-12 mb-4">
 
-            <!--Modal: Name-->
-            <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-lg" role="document">
+              <!--Modal: Name-->
+              <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg" role="document">
 
-                <!--Content-->
-                <div class="modal-content">
+                  <!--Content-->
+                  <div class="modal-content">
 
-                  <!--Body-->
-                  <div class="modal-body mb-0 p-0">
+                    <!--Body-->
+                    <div class="modal-body mb-0 p-0">
 
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe width="560" height="315" src="https://www.youtube.com/embed/GqYdBdJJ7ZM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                      </iframe>
+                      <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/GqYdBdJJ7ZM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                        </iframe>
+                      </div>
+
+                    </div>
+
+                    <!--Footer-->
+                    <div class="modal-footer justify-content-center">
+                      <span class="mr-4">This is how nylon is made.</span>
+                      <a type="button" class="btn-floating btn-sm btn-fb"><i class="fab fa-facebook-f"></i></a>
+                      <!--Twitter-->
+                      <a type="button" class="btn-floating btn-sm btn-tw"><i class="fab fa-twitter"></i></a>
+                      <!--Google +-->
+                      <a type="button" class="btn-floating btn-sm btn-gplus"><i class="fab fa-google-plus-g"></i></a>
+                      <!--Linkedin-->
+                      <a type="button" class="btn-floating btn-sm btn-ins"><i class="fab fa-linkedin-in"></i></a>
+
+                      <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4" data-dismiss="modal">Close</button>
+
                     </div>
 
                   </div>
-
-                  <!--Footer-->
-                  <div class="modal-footer justify-content-center">
-                    <span class="mr-4">This is how nylon is made.</span>
-                    <a type="button" class="btn-floating btn-sm btn-fb"><i class="fab fa-facebook-f"></i></a>
-                    <!--Twitter-->
-                    <a type="button" class="btn-floating btn-sm btn-tw"><i class="fab fa-twitter"></i></a>
-                    <!--Google +-->
-                    <a type="button" class="btn-floating btn-sm btn-gplus"><i class="fab fa-google-plus-g"></i></a>
-                    <!--Linkedin-->
-                    <a type="button" class="btn-floating btn-sm btn-ins"><i class="fab fa-linkedin-in"></i></a>
-
-                    <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4" data-dismiss="modal">Close</button>
-
-                  </div>
+                  <!--/.Content-->
 
                 </div>
-                <!--/.Content-->
-
               </div>
+              <!--Modal: Name-->
+
+              <a><img class="img-fluid z-depth-1" src="./video_1_thumbnail.png" alt="video"
+                  data-toggle="modal" data-target="#modal1"></a>
+
             </div>
-            <!--Modal: Name-->
+            <!-- Grid column -->
 
-            <a><img class="img-fluid z-depth-1" src="./video_1_thumbnail.png" alt="video"
-                data-toggle="modal" data-target="#modal1"></a>
+            <!-- Grid column -->
+            <div class="col-lg-6 col-md-6 mb-4">
 
-          </div>
-          <!-- Grid column -->
+              <!--Modal: Name-->
+              <div class="modal fade" id="modal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg" role="document">
 
-          <!-- Grid column -->
-          <div class="col-lg-6 col-md-6 mb-4">
+                  <!--Content-->
+                  <div class="modal-content">
 
-            <!--Modal: Name-->
-            <div class="modal fade" id="modal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-lg" role="document">
+                    <!--Body-->
+                    <div class="modal-body mb-0 p-0">
 
-                <!--Content-->
-                <div class="modal-content">
+                      <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/2jIQmjpc5Ac" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                        </iframe>
+                      </div>
 
-                  <!--Body-->
-                  <div class="modal-body mb-0 p-0">
+                    </div>
 
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe width="560" height="315" src="https://www.youtube.com/embed/2jIQmjpc5Ac" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                      </iframe>
+                    <!--Footer-->
+                    <div class="modal-footer justify-content-center">
+                      <span class="mr-4">Chemistry is beautiful!</span>
+                      <a type="button" class="btn-floating btn-sm btn-fb"><i class="fab fa-facebook-f"></i></a>
+                      <!--Twitter-->
+                      <a type="button" class="btn-floating btn-sm btn-tw"><i class="fab fa-twitter"></i></a>
+                      <!--Google +-->
+                      <a type="button" class="btn-floating btn-sm btn-gplus"><i class="fab fa-google-plus-g"></i></a>
+                      <!--Linkedin-->
+                      <a type="button" class="btn-floating btn-sm btn-ins"><i class="fab fa-linkedin-in"></i></a>
+
+                      <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4" data-dismiss="modal">Close</button>
+
                     </div>
 
                   </div>
-
-                  <!--Footer-->
-                  <div class="modal-footer justify-content-center">
-                    <span class="mr-4">Spread the word!</span>
-                    <a type="button" class="btn-floating btn-sm btn-fb"><i class="fab fa-facebook-f"></i></a>
-                    <!--Twitter-->
-                    <a type="button" class="btn-floating btn-sm btn-tw"><i class="fab fa-twitter"></i></a>
-                    <!--Google +-->
-                    <a type="button" class="btn-floating btn-sm btn-gplus"><i class="fab fa-google-plus-g"></i></a>
-                    <!--Linkedin-->
-                    <a type="button" class="btn-floating btn-sm btn-ins"><i class="fab fa-linkedin-in"></i></a>
-
-                    <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4" data-dismiss="modal">Close</button>
-
-                  </div>
+                  <!--/.Content-->
 
                 </div>
-                <!--/.Content-->
-
               </div>
+              <!--Modal: Name-->
+
+              <a><img class="img-fluid z-depth-1" src="./video_2_thumbnail.jpg" alt="video"
+                  data-toggle="modal" data-target="#modal6"></a>
+
             </div>
-            <!--Modal: Name-->
+            <!-- Grid column -->
 
-            <a><img class="img-fluid z-depth-1" src="./video_2_thumbnail.jpg" alt="video"
-                data-toggle="modal" data-target="#modal6"></a>
+            <!-- Grid column -->
+            <div class="col-lg-6 col-md-6 mb-4">
 
-          </div>
-          <!-- Grid column -->
+              <!--Modal: Name-->
+              <div class="modal fade" id="modal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg" role="document">
 
-          <!-- Grid column -->
-          <div class="col-lg-6 col-md-6 mb-4">
+                  <!--Content-->
+                  <div class="modal-content">
 
-            <!--Modal: Name-->
-            <div class="modal fade" id="modal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-lg" role="document">
+                    <!--Body-->
+                    <div class="modal-body mb-0 p-0">
 
-                <!--Content-->
-                <div class="modal-content">
+                      <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/FhkoOBtJg4Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                        </iframe>
+                      </div>
 
-                  <!--Body-->
-                  <div class="modal-body mb-0 p-0">
+                    </div>
 
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                      <iframe width="560" height="315" src="https://www.youtube.com/embed/FhkoOBtJg4Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                      </iframe>
+                    <!--Footer-->
+                    <div class="modal-footer justify-content-center">
+                      <span class="mr-4">A robotic cell that I helped design, build, and deliver.</span>
+                      <a type="button" class="btn-floating btn-sm btn-fb"><i class="fab fa-facebook-f"></i></a>
+                      <!--Twitter-->
+                      <a type="button" class="btn-floating btn-sm btn-tw"><i class="fab fa-twitter"></i></a>
+                      <!--Google +-->
+                      <a type="button" class="btn-floating btn-sm btn-gplus"><i class="fab fa-google-plus-g"></i></a>
+                      <!--Linkedin-->
+                      <a type="button" class="btn-floating btn-sm btn-ins"><i class="fab fa-linkedin-in"></i></a>
+
+                      <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4" data-dismiss="modal">Close</button>
+
                     </div>
 
                   </div>
-
-                  <!--Footer-->
-                  <div class="modal-footer justify-content-center">
-                    <span class="mr-4">Spread the word!</span>
-                    <a type="button" class="btn-floating btn-sm btn-fb"><i class="fab fa-facebook-f"></i></a>
-                    <!--Twitter-->
-                    <a type="button" class="btn-floating btn-sm btn-tw"><i class="fab fa-twitter"></i></a>
-                    <!--Google +-->
-                    <a type="button" class="btn-floating btn-sm btn-gplus"><i class="fab fa-google-plus-g"></i></a>
-                    <!--Linkedin-->
-                    <a type="button" class="btn-floating btn-sm btn-ins"><i class="fab fa-linkedin-in"></i></a>
-
-                    <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4" data-dismiss="modal">Close</button>
-
-                  </div>
+                  <!--/.Content-->
 
                 </div>
-                <!--/.Content-->
-
               </div>
+              <!--Modal: Name-->
+
+              <a><img class="img-fluid z-depth-1" src="./video_3_thumbnail.jpg" alt="video"
+                  data-toggle="modal" data-target="#modal4"></a>
+
             </div>
-            <!--Modal: Name-->
-
-            <a><img class="img-fluid z-depth-1" src="./video_3_thumbnail.jpg" alt="video"
-                data-toggle="modal" data-target="#modal4"></a>
-
+            <!-- Grid column -->
           </div>
-          <!-- Grid column -->
         </div>
-        <!-- youtube videos -->
       </div>
-      <!-- #######################beer_icons############################## -->
     </main>
-    <footer>
-      
+    <footer class="container" id="footer">
+      <div class="row">
+        <h6 class="col text-center">Designed, coded, and managed by Andrew Humphrey.</h4>
+     </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
