added matrix feature and help commands

--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@
             <!-- Grid column -->
           </div>
         </div>
+        <canvas width="100%" height="100%" id="canv"></canvas>
       </div>
     </main>
     <footer class="container" id="footer">
