--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- #######################header################################## -->  
       <header class="row justify-content-center flex-nowrap">
         <h1 class="row animate__animated animate__bounce links align-items-center text-center" id=animated_string>Welcome to my portfolio</h1>
-        <!-- <svg class=row xmlns="http://www.w3.org/2000/svg" id="logo" width="100%" height="100%"></svg> -->
+        <div class="row" id="whale"></div>
       </header>
       <!-- #######################computer animation and terminal###################### -->
       <div class="container-xs">
