--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       <header class="row justify-content-center flex-nowrap">
         <h1 class="row animate__animated animate__bounce links align-items-center text-center" id=animated_string>Welcome to my portfolio</h1>
         <div class="row" id="whale"></div>
+        <canvas id="canv">
+        </canvas>
       </header>
       <!-- #######################computer animation and terminal###################### -->
       <div class="container-xs">
@@ -234,7 +236,7 @@
           </div>
           <div class="col-md mx-4" id=second_icon>
             <div class="logo_container text-center">
-              <svg xmlns="http://www.w3.org/2000/svg" width="68px" height="100px" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="68px" fill="#0077B5" height="100px" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
             </div>
           </div>
           <div class="col-md mx-4" id=fourth_icon>
@@ -245,7 +247,7 @@
           </div>
           <div class="col-md mx-4" id=third_icon>
             <div class="logo_container text-center">
-              <svg xmlns="http://www.w3.org/2000/svg" width="68px" height="100px" viewBox="0 0 24 24"><path d="M11.362 2c4.156 0 2.638 6 2.638 6s6-1.65 6 2.457v11.543h-16v-20h7.362zm.827-2h-10.189v24h20v-14.386c0-2.391-6.648-9.614-9.811-9.614zm4.811 13h-3v-1h3v1zm0 2h-3v1h3v-1zm0 3h-10v1h10v-1zm-5-6h-5v4h5v-4z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="68px" height="100px" fill="grey" viewBox="0 0 24 24"><path d="M11.362 2c4.156 0 2.638 6 2.638 6s6-1.65 6 2.457v11.543h-16v-20h7.362zm.827-2h-10.189v24h20v-14.386c0-2.391-6.648-9.614-9.811-9.614zm4.811 13h-3v-1h3v1zm0 2h-3v1h3v-1zm0 3h-10v1h10v-1zm-5-6h-5v4h5v-4z"/></svg>
             </div>
           </div>
           <div class="col-md mx-4" id=fifth_icon>
@@ -447,7 +449,7 @@
             <!-- Grid column -->
           </div>
         </div>
-        <canvas width="100%" height="100%" id="canv"></canvas>
+        
       </div>
     </main>
     <footer class="container" id="footer">
